--- a/src/App.css
+++ b/src/App.css
@@ -1,94 +1,114 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
+
 html body {
-  background-image: url("BackgroundPic.jpg");
+    background-image: url("BackgroundPic.jpg");
 
 }
 
 #app {
-  background-color: white;
-  border-radius: 10px;
-  position: absolute;
-  padding: 1%;
-  left: 15%;
-  width: 70%;
-  top: 13%;
+    background-color: white;
+    border-radius: 10px;
+    position: absolute;
+    padding: 1%;
+    left: 15%;
+    width: 70%;
+    top: 13%;
 }
 
 #button {
-  text-align: center;
-  border-radius: 5px;
-  position: absolute;
-  width: 10%;
-  margin-top: 1%;
-  font-size: 1.3vw;
-  background-color: cornflowerblue;
-  border-color: cornflowerblue;
+    text-align: center;
+    border-radius: 5px;
+    position: absolute;
+    width: 10%;
+    margin-top: 1%;
+    font-size: 1.3vw;
+    background-color: cornflowerblue;
+    border-color: cornflowerblue;
 }
 
 #register {
-  text-align: center;
-  padding-top: 1%;
-  font-size: 1.3vw;
+    text-align: center;
+    padding-top: 1%;
+    font-size: 1.3vw;
 
 }
 
 a {
-  color: cornflowerblue;
+    color: cornflowerblue;
 }
 
 .test {
-  font-size: 1.3vw;
+    font-size: 1.3vw;
 
 }
 
 .big-text {
-  font-size: 1.7vw;
+    font-size: 1.7vw;
 
 }
-.left-menu{
-  background-color: #282c34;
-  width: 30%;
-  float: left;
+
+.left-menu {
+    background-color: #282c34;
+    width: 30%;
+    left: 0%;
 }
-.chat-sec{
-  background-color: red;
-  width: 70%;
-  float: right;
+
+.chat-sec {
+    width: 70%;
+    left: 30%;
+    position: absolute;
+    background-color: #61dafb;
+    height: 100%;
+    top: 0%;
+}
+
+.align {
+    text-align: center;
+}
+
+.chat-pic {
+    height: 40px;
+    width: 40px;
+    float: left;
+}
+.send-sec{
+    position: relative;
+
 }
