--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ a {
 .left-menu {
     position: fixed;
     width: 30%;
-    left: 0px;
+    left: 0;
     height: 100%;
     overflow-y: scroll;
 }
@@ -99,8 +99,8 @@ a {
     float: right;
     position: fixed;
     height: 100%;
-    top: 0%;
-    bottom: 0%;
+    top: 0;
+    bottom: 0;
 }
 
 .chat-nav {
@@ -139,9 +139,9 @@ a {
 .send-bottom {
     position: absolute;
     width: 5%;
-    right: 0%;
+    right: 0;
     height: 100%;
-    border-radius: 0%;
+    border-radius: 0;
 }
 
 
@@ -184,7 +184,7 @@ a {
     position: absolute;
     top: 14%;
     width: 30%;
-    left: 0px;
+    left: 0;
     height: 86%;
     overflow-y: scroll;
 }
@@ -226,9 +226,9 @@ a {
 .record-bottom {
     position: absolute;
     width: 5%;
-    left: 0%;
+    left: 0;
     height: 100%;
-    border-radius: 0%;
+    border-radius: 0;
 }
 
 .file-bottom {
@@ -236,8 +236,8 @@ a {
     width: 5%;
     left: 5%;
     height: 100%;
-    top: 0%;
-    border-radius: 0%;
+    top: 0;
+    border-radius: 0;
 }
 #file{
     visibility: hidden;
