--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,6 @@ a {
 .left-menu {
     position: fixed;
     width: 30%;
-    left: 0px;
     height: 100%;
     overflow-y: scroll;
 }
@@ -106,7 +105,7 @@ a {
 .chat-nav {
     text-align: center;
     height: 7%;
-    background-color: red;
+    background-color: white;
 }
 
 .chat-pic {
@@ -124,7 +123,7 @@ a {
 
 .send-sec {
     position: absolute;
-    bottom: 1px;
+    bottom: 0px;
     width: 100%;
     height: 7%;
 }
@@ -147,7 +146,7 @@ a {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
 }
 
 /* Track */
@@ -183,7 +182,7 @@ a {
 .lower-left {
     position: absolute;
     top: 14%;
-    width: 30%;
+    width: 100%;
     left: 0px;
     height: 86%;
     overflow-y: scroll;
@@ -191,7 +190,7 @@ a {
 .upper-left-main{
     position: absolute;
     height: 14%;
-    width: 30%;
+    width: 100%;
 }
 .upper-left {
     width: 100%;
@@ -237,4 +236,13 @@ a {
     left: 5%;
     height: 100%;
     border-radius: 0%;
+}
+.modelBackground {
+    z-index: 10000;
+}
+.modelContainer {
+    position: fixed;
+    width: 50%;
+    left: 10%;
+    z-index: 10000;
 }
