--- a/src/App.css
+++ b/src/App.css
@@ -279,6 +279,16 @@ a {
     -o-background-size: cover;
     background-size: cover;
 }
+.log-reg-background {
+    position: fixed;
+    width: 100%;
+    background-image: url("./BackgroundPic.jpg");
+    background-color: #282c34;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 #transparent-bubble{
     background-color: rgba(40, 44, 52, 0.00);
     border-right: rgba(136, 136, 136, 0);
